--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,13 @@ body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
     text-align: left;
-    background-color: #27ae60;
+    background-image: linear-gradient(35deg, black, transparent), url('https://i.pinimg.com/originals/75/51/1b/75511b6305a5486de10a2d0ea91e5230.jpg');
+    color: white;
+    width: 100%;
+    height: 100vh;
+    /* color: #212529; */
+    /* background-color: #27ae60; */
 }
 
 .nav-item, .nav-box {
@@ -25,15 +29,10 @@ body {
     background-color: rgba(255, 255, 255, 0.8);
 }
 
-#section-contact>.container {
-    background-image: linear-gradient(35deg, black, transparent), url('https://i.pinimg.com/originals/75/51/1b/75511b6305a5486de10a2d0ea91e5230.jpg');
-    color: white;
-    width: 100%;
-    height: 100vh;
-}
+/* #section-contact>.container */
 
 #news {
-    height: 93vh;
+    height: 86vh;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.8);
     overflow-y: auto;
@@ -78,6 +77,27 @@ body {
 #news .conteudo {
     color: #333;
     width: 100%;
+}
+
+.align-middle {
+    color: white;
+}
+
+/* barra vertical */
+
+#news::-webkit-scrollbar {
+    width: 3px;
+    top: 10px;
+    left: 0;
+    right: 5px;
+    bottom: 10px;
+}
+
+#news::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(39, 174, 96, 0.8);
+    -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
 }
 
 @media screen and (max-width: 1024px) {
