--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,24 @@
 body {
-    padding: 0 25vw;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    text-align: left;
-    background-image: linear-gradient(35deg, black, transparent), url('https://i.pinimg.com/originals/75/51/1b/75511b6305a5486de10a2d0ea91e5230.jpg');
-    color: white;
     width: 100%;
     height: 100vh;
+    padding: 0 25vw;
+    text-align: left;
+    background-image: /*linear-gradient(35deg, transparent, transparent),*/
+    url('https://i.pinimg.com/originals/75/51/1b/75511b6305a5486de10a2d0ea91e5230.jpg');
+    background-size: contain;
     /* color: #212529; */
     /* background-color: #27ae60; */
 }
 
+body>* {
+    font-family: Montserrat;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
 .nav-item, .nav-box {
-    width: 30%;
+    width: 35%;
     color: #212529;
     background-color: white;
     border-radius: 5px 5px 0 0;
@@ -22,7 +26,7 @@ body {
 }
 
 .nav-box {
-    width: 70%;
+    width: 65%;
 }
 
 .nav-item:not(.active) {
@@ -59,6 +63,23 @@ body {
 
 #news a strong {
     color: #2ecc71;
+}
+
+span strong {
+    font-size: 1.3rem;
+    max-width: 253px;
+}
+
+.d-flow {
+    /* position: absolute;
+    right: 60px; */
+    margin-top: -12px;
+    display: flow-root;
+    font-size: small !important;
+}
+
+.negative {
+    color: darkred !important;
 }
 
 #news .text-justify {
@@ -117,17 +138,11 @@ body {
     }
 }
 
-@media screen and (max-width: 550px) {
-    #news .conteudo {
-        font-size: small;
-    }
-}
-
 @media screen and (max-width: 480px) {
     #news .conteudo {
         font-size: small;
     }
-    #news .conteudo h4 {
+    #news .conteudo h5 {
         font-size: medium;
     }
 }
@@ -137,7 +152,7 @@ body {
         max-width: 100px;
         max-height: 100px;
     }
-    #news .conteudo h4 {
+    #news .conteudo h5 {
         font-size: x-small;
     }
     #news .conteudo {
