--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,11 @@
 body {
     width: 100%;
-    height: 100vh;
+    height: auto;
     padding: 0 25vw;
     text-align: left;
     background-image: /*linear-gradient(35deg, transparent, transparent),*/
     url('https://i.pinimg.com/originals/75/51/1b/75511b6305a5486de10a2d0ea91e5230.jpg');
     background-size: contain;
-    /* color: #212529; */
-    /* background-color: #27ae60; */
 }
 
 body>* {
@@ -15,6 +13,12 @@ body>* {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
+    color: #333;
+}
+
+.container {
+    padding: 0;
+    margin: 0;
 }
 
 .nav-item, .nav-box {
@@ -29,61 +33,23 @@ body>* {
     width: 65%;
 }
 
-.nav-item:not(.active) {
-    background-color: rgba(255, 255, 255, 0.8);
-}
-
-/* #section-contact>.container */
-
 #news {
-    height: 86vh;
+    height: 75vh;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.8);
     overflow-y: auto;
-}
-
-#news>div {
-    opacity: 1;
-    color: #333;
-}
-
-#news img {
-    max-width: 150px;
-    max-height: 150px;
-    border-radius: 20px;
 }
 
 #news a {
     text-decoration: none;
 }
 
-#news a:hover strong {
-    color: #27ae60;
-}
-
 #news a strong {
     color: #2ecc71;
 }
 
-span strong {
-    font-size: 1.3rem;
-    max-width: 253px;
-}
-
-.d-flow {
-    /* position: absolute;
-    right: 60px; */
-    margin-top: -12px;
-    display: flow-root;
-    font-size: small !important;
-}
-
-.negative {
-    color: darkred !important;
-}
-
-#news .text-justify {
-    color: #333
+#news a:hover strong {
+    color: #27ae60;
 }
 
 #news .news-bord {
@@ -95,9 +61,32 @@ span strong {
     background-color: rgba(255, 255, 255, 0.5);
 }
 
+#news img {
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 20px;
+}
+
 #news .conteudo {
     color: #333;
     width: 100%;
+}
+
+.d-flow {
+    margin-top: -12px;
+    display: flow-root;
+    font-size: small;
+}
+
+.negative {
+    color: darkred !important;
+}
+
+/* TITULO */
+
+span strong {
+    font-size: 1.3rem;
+    max-width: 253px;
 }
 
 .align-middle {
@@ -131,32 +120,20 @@ span strong {
     body {
         padding: 0 5vw;
     }
-    #section-first .container {
-        height: 150vh;
-        background-color: white;
-        border: 2px solid green;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    #news .conteudo {
-        font-size: small;
-    }
-    #news .conteudo h5 {
-        font-size: medium;
-    }
 }
 
 @media screen and (max-width: 425px) {
-    #news img {
-        max-width: 100px;
-        max-height: 100px;
+    .fa-lg {
+        font-size: 1em !important;
     }
-    #news .conteudo h5 {
-        font-size: x-small;
+    span strong {
+        font-size: 1rem;
     }
-    #news .conteudo {
-        font-size: x-small;
+    #news .d-block {
+        font-size: 0.8rem;
         max-width: 90%;
+    }
+    #news .d-flow {
+        font-size: 0.6rem;
     }
 }
