--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
     text-align: left;
     background-image: /*linear-gradient(35deg, transparent, transparent),*/
     url('https://i.pinimg.com/originals/75/51/1b/75511b6305a5486de10a2d0ea91e5230.jpg');
-    background-size: contain;
+    background-size: cover;
 }
 
 body>* {
